styles.css
/*/// Variables ///*/

@property --primary-color {
  syntax: "<color>";
  inherits: false;
  initial-value: #F9DC5C; /* Naples yellow */
}

@property --secondary-color {
  syntax: "<color>";
  inherits: false;
  initial-value: #403F4C; /* Onyx */
}

@property --accent-color {
  syntax: "<color>";
  inherits: false;
  initial-value: #3185FC; /* Azure (blue) */
}

* {
  font-family: "Open Source", Arial, Helvetica, sans-serif;
  color: var(--secondary-color)
}

body {
  margin: 0;
  padding: 0;
}

main {
  display: flex;
  flex-flow: row wrap;
  align-items: center;
  align-content: space-around;
  justify-content: center;
  row-gap: 20px;
  margin: 40px 10%;
}

/*/// Header & navigation ///*/
header {
  margin: 0;
  padding: 5px;
  background-color: var(--primary-color);
}

nav {
  padding: 10px;
  font-weight: 500;
}

nav > ul {
  margin: 0;
  padding: 0;
  /* display: flex; */
  justify-content: space-between;
  align-items: center;
  list-style-type: none;
}

nav > ul > li {
  /* flex-basis: 0 2;
  flex-shrink: 1; */
  display: inline;
  padding: 5px 10px;
}

/* Site Logo */
nav > ul > li:nth-child(1) {
  flex-basis: 60%;
  font-weight: 900;
  font-size: 20px;
  flex-basis: 2 1;
  align-self: flex-start;
}

nav > ul > li > a {
  text-decoration: none;
}

nav > ul > li > a:hover {
  text-decoration: underline;
  color: var(--accent-color);
  cursor: pointer;
}

/* Sticky Header */
.sticky {
  position: fixed;
  top: 0;
  width: 100%;
}

.sticky + .content {
  padding-top: 50px;
}

/*/// Hero title & content ///*/

#page-img, h1 {
  display: inline-block;
  margin: 0;
  padding: 0 10px;
  flex-basis: 100px;
}

h1 {
  width: 400px;
}

h2 {
  width: 100%;
}

.accent-color {
  color: var(--accent-color)
}

/*// Section Styles //*/

section {
  width: 100%;
}

section > h2 {
  border-bottom: 2px solid var(--accent-color);
  text-align: center;
}

section > p,
section > form {
  margin: 0px 20px;
}

/* Skipped '.introduction */

.experience {
  display: flex;
  flex-flow: row wrap;
  align-content: start;
  justify-content: space-evenly;
}

.experience > h2 {
  flex-basis: 100%;
}

.experience > ul {
  flex-basis: 25%;
  margin: 0;
}

.experience > ul > li {
  margin: 10px 0;
}



/* Skipped '.form' */

#contact-form {
  display: flex;
  flex-flow: row wrap;
  align-content: center;
  align-items: last baseline;
}

#contact-form > label {
  margin: 10px 0;
  position: relative;
  flex-basis: 20%;
}

.input {
  /* position: absolute; */
  left: 75px;
  margin: 5px 0;
  padding: 5px 10px;
  width: 200px;
  box-sizing: border-box;
  flex-basis: 80%;
}

input[type="submit"] {
  background-color: var(--secondary-color);
  color: white;
  border-radius: 5px;
  margin: 10px auto;
  padding: 5px 40px;
  box-sizing: border-box;
  cursor: pointer;
  border: none;
}

#contact-submit:hover {
  background-color: var(--accent-color);
}

/*// Footer //*/

footer {
  background-color: var(--primary-color);
  height: 200px;
  padding: 30px;
  text-align: center;
}

